eftsuite/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: eftsuite
  name: eftsuite
spec:
  finalizers:
    - kubernetes
