eftsuite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eftsuite
  namespace: eftsuite
  labels:
    app: eftsuite
spec:
  selector:
    app: eftsuite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
