eftsuite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eftsuite
  namespace: eftsuite
  labels:
    app: eftsuite
spec:
  rules:
    - host: eftsuite.drhack.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: eftsuite
                port:
                  number: 80
